:arrow_up: logging dep bump, java 21 and small changes